--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,10 @@ body {
 }
 
 h2 {
-  color: #7A0019;
+  color: #08202D;
 }
 
 #contact {
-  background-color: #FFDE7A;
+  background-color: #00CDCD;
   padding: 2%;
 }
