--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ h2 {
 }
 
 .dropbtn {
-    background-color: #4CAF50;
+    background-color: #800000;
     color: white;
     padding: 16px;
     font-size: 16px;
