--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,8 @@ h2 {
 table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
-    float:right;
+    margin-right: 0px;
+    margin-left: auto;
 }
 th, td {
     padding: 5px;
