--- a/styles.css
+++ b/styles.css
@@ -53,10 +53,18 @@ h2 {
 table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
-    margin-right: 0px;
-    margin-left: auto;
 }
 th, td {
     padding: 5px;
     text-align: left;
+}
+
+#outer-div {
+}
+
+#text-div{
+}
+
+#table-div{
+    float:right;
 }
